--- a/Analytics_4.ipynb
+++ b/Analytics_4.ipynb
@@ -39,11 +39,11 @@
         "id": "kMwm1F-Fktke"
       },
       "source": [
-        "# !pip install keras\n",
-        "# !pip install tensorflow\n",
-        "# !pip install pandas \n",
-        "# !pip install sklearn \n",
-        "# !pip install matplotlib \n",
+        "!pip install keras\n",
+        "!pip install tensorflow\n",
+        "!pip install pandas \n",
+        "!pip install sklearn \n",
+        "!pip install matplotlib \n",
         "!pip install -U efficientnet\n"
       ],
       "execution_count": null,
